# nasa-rmc

./: .gitignore  .gitmodules  README.md  build.sh  build_only_docker.sh  launch.sh  launch_only_docker.sh  setupCAN.sh
.devcontainer/: Dockerfile  devcontainer.json
docs/: can_id_allocation.md  can_moteus.md  code_overview.md  getting_started.md  install_on_linux.md  install_on_windows.md  installing_on_mac.md
motherboard/: CMakeLists.txt  readme.md
motherboard/include/: FreeRTOSConfig.h  I2CExpander.hpp  dataInUSB.hpp  dataOutUSB.hpp
motherboard/src/: dataInUSB.cpp  dataOutUSB.cpp  main.cpp  pwmPort.cpp  usbHandler.cpp
src/Autonomous/: AruCoLib.py  Navigation.py  main.py
src/arm/: CMakeLists.txt  package.xml
src/arm/src/: my_node.cpp
src/autonomous_nav/autonomous_nav/: sensor_processing_node.py
src/camera/: package.xml
src/camera/camera/: roscamera.py
src/can/: CMakeLists.txt  package.xml
src/can_moteus/: setup.py
src/communication/: CMakeLists.txt  package.xml
src/custom_interfaces/: CMakeLists.txt  package.xml
src/drivebase/: package.xml  setup.py
src/hello_world/: CMakeLists.txt  package.xml
src/interface/: robot_interface.py
src/life_detection/: package.xml  setup.cfg  setup.py
src/localization/: package.xml  setup.cfg  setup.py
src/monitering/: CMakeLists.txt  package.xml
src/robot_info/: package.xml  setup.cfg  setup.py
src/sensor/: CMakeLists.txt  package.xml
src/teleoperation/: package.xml  setup.cfg  setup.py
src/testingInterface/: package.xml  setup.cfg  setup.py
src/viator_launch/: package.xml  setup.py
(+19 files in other folders)
